opam-version: "1.2"
maintainer: "Simon Cruanes <simon.cruanes.2007@m4x.org"
name: "qtest"
version: "2.9"
authors: [
  "Vincent Hugot <vincent.hugot@gmail.com>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org"
]
homepage: "https://github.com/vincent-hugot/qtest"
bug-reports: "https://github.com/vincent-hugot/qtest/issues"
doc:
  "https://github.com/vincent-hugot/qtest/blob/master/README.adoc#introduction"
dev-repo: "git@github.com:vincent-hugot/qtest.git"
build: [
  [ "jbuilder" "build" "-j" jobs "-p" name ]
]
depends: [
  "base-bytes"
  "ounit" { >= "2.0.0" }
  "jbuilder" {build & >= "1.0+beta19"}
  "qcheck" { >= "0.5" }
]
tags: [
  "test"
  "property"
  "quickcheck"
]
available: [ocaml-version >= "4.02.0"]
