opam-version: "2.0"
maintainer: "Simon Cruanes <simon.cruanes.2007@m4x.org"
version: "2.11.2"
authors: [
  "Vincent Hugot <vincent.hugot@gmail.com>"
  "Simon Cruanes <simon.cruanes.2007@m4x.org"
]
synopsis: "Lightweight inline test extraction from comments"
homepage: "https://github.com/vincent-hugot/qtest"
bug-reports: "https://github.com/vincent-hugot/qtest/issues"
doc:
  "https://github.com/vincent-hugot/qtest/blob/master/README.adoc#introduction"
dev-repo: "git+https://github.com/vincent-hugot/qtest.git"
build: [
  [ "dune" "build" "@install" "-j" jobs "-p" name ]
]
depends: [
  "base-bytes"
  "ounit2"
  "dune" { >= "1.1" }
  "qcheck" { >= "0.14" }
  "ocaml" { >= "4.03.0" }
]
tags: [
  "test"
  "property"
  "quickcheck"
]
