
(executable
  (name qtest_bin)
  (public_name qtest)
  (libraries bytes)
  (flags :standard -w +a-4-29-44-50@8 -warn-error -a+8 -safe-string))

(ocamllex (modules qtest_bin misclex))

(ocamlyacc (modules qparse))

(library
  (public_name qtest.lib)
  (name qtestlib)
  (modules)
  (inline_tests.backend
    (generate_runner (run qtest extract --quiet %{impl-files} %{intf-files}))
    (runner_libraries qcheck ounit2 bytes)))
